added some jQuery (project name motion is animated), resume sections collapse in an accordion, cleaned up some redundant CSS

--- a/main-pages/fun.html
+++ b/main-pages/fun.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/styles1.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <script src="../project-scripts/animations.js"></script>
   </head>
 
   <body>
