--- a/main-pages/resume.html
+++ b/main-pages/resume.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <script src="../project-scripts/animations.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
@@ -50,23 +53,27 @@
 
     <div class="resume-section">
       <p><span class="section-title">DOWNLOAD</span></p>
+      <div class="the-rest">
       <p><a href="../media/julietslade-resume.pdf" download="julietslade-resume">pdf version</a></p>
-
+      </div>
     </div>
 
     <div class="line"></div>
 
     <div class="resume-section">
       <p><span class="section-title">EDUCATION</span></p>
+      <div class="the-rest">
       <span class="section-details-1">SARAH LAWRENCE COLLEGE</span>
       <p class="section-details-2">BA WITH COMPUTER SCIENCE CONCENTRATION</p>
       <p><span class="section-details-3">May 2017 | Bronxville, NY</span></p>
+    </div>
     </div>
 
     <div class="line"></div>
 
     <div class="resume-section">
       <span class="section-title">COURSEWORK</span>
+      <div class="the-rest">
       <p><span class="section-details-1">TECH-RELATED</span></p>
       <p>Independent Study in Web Tools for Learning to Program</p>
       <p>Databases and Server-Side Programming</p>
@@ -79,25 +86,28 @@
       <p>Bio-Inspired Artificial Intelligence</p>
       <p>Data Structures &amp; Algorithms</p>
       <p>Intro. to Computer Programming</p>
+      </div>
     </div>
 
     <div class="line"></div>
 
     <div class="resume-section">
       <p><span class="section-title">SKILLS</span></p>
+      <div class="the-rest">
         <span class="section-details-3">Most Comfortable/Fluent</span>
             <p>JavaScript • Python</p>
           <span class="section-details-3">Familiar with</span>
-            <p>HTML/CSS • Java • C • PHP • MySQL • Sass • Scala • Neo4j • Scheme</p>
+            <p>HTML/CSS • Java • Ruby • C • PHP • MySQL • Sass • jQuery • Scala • Neo4j • Scheme</p>
           <span class="section-details-3">Other</span>
             <p>Blender • Microsoft Suite</p>
-
+          </div>
     </div>
 
     <div class="line"></div>
 
     <div class="resume-section">
       <span class="section-title">EXPERIENCE</span>
+      <div class="the-rest">
       <p><span class="section-details-1">WESTCHESTER END OF LIFE COALITION</span> | <span class="section-details-2">PROJECT ASSISTANT</span>
       <p><span class="section-details-3">Nov 2015 - Present | Bronxville, NY</span></p>
         <ul>
@@ -143,7 +153,7 @@
       <p><span class="section-details-3">May 2014 - August 2014 | Shakopee, MN</span></p>
       </p>
 
-
+</div>
 
     </div>
 
@@ -151,6 +161,7 @@
 
     <div class="resume-section">
       <span class="section-title">RESEARCH</span>
+      <div class="the-rest">
       <p><span class="section-details-1">SARAH LAWRENCE COLLEGE SUMMER RESEARCH PROGRAM</span> | <span class="section-details-2">COMPUTER SCIENCE RESEARCH ASSISTANT</span>
       <p><span class="section-details-3">May 2017 - July 2017 | Bronxville, NY</span></p>
       <p>Worked with professor Michael Siff and another student to create <a href="https://github.com/avinoamhenig/vpl">VPL</a>
@@ -159,6 +170,7 @@
         My specific role was to implement the back-end evaluator which traversed the
         node-based AST we created for this language.</p>
       </p>
+    </div>
     </div>
 
     <div class="line"></div>
