--- a/main-pages/projects.html
+++ b/main-pages/projects.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/projects-table.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/styles1.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <script src="../project-scripts/animations.js"></script>
   </head>
 
   <body>
