Added freelance work, updated resume

--- a/main-pages/projects.html
+++ b/main-pages/projects.html
@@ -56,6 +56,15 @@
         </tr>
 
         <tr>
+          <td><div class="circle" onclick="location.href ='../project-pages/thechartedpath.html'"></div></td>
+          <td class="project-name"><h3>FREELANCE WEB DESIGN</h3></td>
+        </tr>
+
+        <tr>
+          <td><div class="line"></div></td>
+        </tr>
+
+        <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/jshelp.html'"></div></td>
           <td class="project-name"><h3>JS-HELP</h3></td>
         </tr>
