--- a/main-pages/resume.html
+++ b/main-pages/resume.html
@@ -93,12 +93,12 @@
     <div class="resume-section">
       <p><span class="section-title">SKILLS</span></p>
 
-        <span class="section-details-3">Most Comfortable/Fluent</span>
+        <span class="section-details-3">Current Primary Focus</span>
             <p>JavaScript • Python</p>
-          <span class="section-details-3">Familiar with</span>
-            <p>HTML/CSS • Java • Ruby • C • PHP • MySQL • Sass • jQuery • Scala • Neo4j • Scheme</p>
+          <span class="section-details-3">Other Significant Experience</span>
+            <p>HTML/CSS/Sass • Java • Ruby • C • PHP • SQL • jQuery • Scala • Neo4j • Scheme</p>
           <span class="section-details-3">Other</span>
-            <p>Blender • Microsoft Suite</p>
+            <p>Blender • Microsoft Suite • IoT</p>
 
     </div>
 
@@ -107,11 +107,21 @@
     <div class="resume-section">
       <span class="section-title">EXPERIENCE</span>
 
+      <p><span class="section-details-1">THE CHARTED PATH</span> | <span class="section-details-2">FREELANCE WEB DESIGNER/DEVELOPER</span>
+      <p><span class="section-details-3">September 2017 - October 2017 | Bronxville, NY</span></p>
+        <ul>
+          <li>Built and designed company website using Wix.</li>
+          <li>Created graphics for the website as well as: business cards, Facebook cover photo, and Mailchimp template.</li>
+          <li>Assisted with domain transferring as well as e-mail forwarding.</li>
+        </ul>
+      </p>
+
       <p><span class="section-details-1">WESTCHESTER END OF LIFE COALITION</span> | <span class="section-details-2">PROJECT ASSISTANT</span>
       <p><span class="section-details-3">Nov 2015 - Present | Bronxville, NY</span></p>
         <ul>
-          <li>Contracted employee providing technology assistance for a growing nonprofit
-            agency.</li>
+          <li>Co-managed the successful implementation of a new fundraising database system, responsibilites included: merging 
+            numerous data files into one file, formatted based on system set-up; reviewing import file to ensure data integrity;
+            and managing successful import process.</li>
           <li> Assists with managing and updating database and the back-end of agency’s
             WordPress website.</li>
         </ul>
@@ -162,14 +172,14 @@
       <span class="section-title">RESEARCH</span>
 
       <p><span class="section-details-1">SARAH LAWRENCE COLLEGE SUMMER RESEARCH PROGRAM</span> | <span class="section-details-2">COMPUTER SCIENCE RESEARCH ASSISTANT</span>
-      <p><span class="section-details-3">May 2017 - July 2017 | Bronxville, NY</span></p>
+      <p><span class="section-details-3">May 2016 - July 2016 | Bronxville, NY</span></p>
       <p>Worked with professor Michael Siff and another student to create <a href="https://github.com/avinoamhenig/vpl">VPL</a>
         (otherwise known as JAM for Juliet, Avinoam, Mike), a visual programming language. Our goal was to explore
         programming on a touch screen device which involved minimizing the need to type.
         My specific role was to implement the back-end evaluator which traversed the
         node-based AST we created for this language.</p>
       </p>
-  
+
     </div>
 
     <div class="line"></div>
