added pages for projects in progress: packer app and book blog

--- a/main-pages/projects.html
+++ b/main-pages/projects.html
@@ -56,6 +56,24 @@
         </tr>
 
         <tr>
+          <td><div class="circle" onclick="location.href ='../project-pages/bbb.html'"></div></td>
+          <td class="project-name"><h3>BOOK BLOG (IN PROGRESS)</h3></td>
+        </tr>
+
+        <tr>
+          <td><div class="line"></div></td>
+        </tr>
+
+        <tr>
+          <td><div class="circle" onclick="location.href ='../project-pages/rmbg.html'"></div></td>
+          <td class="project-name"><h3>PACKING APP (IN PROGRESS)</h3></td>
+        </tr>
+
+        <tr>
+          <td><div class="line"></div></td>
+        </tr>
+
+        <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/thechartedpath.html'"></div></td>
           <td class="project-name"><h3>FREELANCE WEB DESIGN</h3></td>
         </tr>
