updated tools for packing app

--- a/project-pages/rmbg.html
+++ b/project-pages/rmbg.html
@@ -77,7 +77,7 @@
     <div class="line"></div>
     <div id="tech-description">
       <p><span class="section-title">TOOLS</span></p>
-      <p>Ruby on Rails • Heroku • HTML/CSS/SCSS • Bootstrap</p>
+      <p>Ruby on Rails • JavaScript • HTML/CSS/SCSS/jQuery</p>
     </div>
     <div id="foot">
       <ul class="links">
