moved packing app from 'projects' to 'for fun'
TODO: think about what the difference is between "projects" and "for
fun"

--- a/main-pages/fun.html
+++ b/main-pages/fun.html
@@ -57,6 +57,15 @@
         </tr>
 
         <tr>
+          <td><div class="circle" onclick="location.href ='../project-pages/rmbg.html'"></div></td>
+          <td class="project-name"><h3>PACKING APP (IN PROGRESS)</h3></td>
+        </tr>
+
+        <tr>
+          <td><div class="line"></div></td>
+        </tr>
+
+        <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/this-site.html'"></div></td>
           <td class="project-name"><h3>THIS WEBSITE</h3></td>
         </tr>
