--- a/project-pages/rmbg.html
+++ b/project-pages/rmbg.html
@@ -12,7 +12,7 @@
       <ul class="nav">
         <li>
           <!-- <div class="dropdown"> -->
-            <a class="active" href="../main-pages/projects.html">PROJECTS</a>
+            <a href="../main-pages/projects.html">PROJECTS</a>
             <!-- <div class="dropdown-content">
               <a href="./jshelp.html">js-help</a>
               <a href="./LilGuy.html">lil guy</a>
@@ -28,7 +28,7 @@
         </li>
         <li>
           <!-- <div class="dropdown"> -->
-            <a href="../main-pages/fun.html">FOR FUN</a>
+            <a class="active" href="../main-pages/fun.html">FOR FUN</a>
             <!-- <div class="dropdown-content">
               <a href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
