oops, link to wrong gif in bbb

--- a/project-pages/bbb.html
+++ b/project-pages/bbb.html
@@ -62,7 +62,7 @@
     </div>
     <div id="hidden-line-gallery"></div>
     <div id="gif-container">
-      <img style="width: 100%"src="../project-gifs/bbb.gif" />
+      <img style="width: 100%"src="../project-gifs/bbb-demo.gif" />
     </div>
   </div>
     <div class="line"></div>
